--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PrivateEvents</title>
+    <%= render 'layouts/navbar' %>
+    <title> Private Events </title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +11,11 @@
   </head>
 
   <body>
+    <% flash.each do |key, val| %>
+      <%= val %> </br>
+    <% end %>
+    <h1> <%= yield(:title) %> </h1>
     <%= yield %>
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
